prevent overflow-x on iphone 6 safari

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -3,6 +3,7 @@
 	background: url(../../../assets/home-image-1.jpg);
 	background-size: cover;
 	height: 45rem;
+	overflow-x: hidden;
 	// container
 	.wrapper {
 		display: flex;
