--- a/styles/styles.css
+++ b/styles/styles.css
@@ -531,6 +531,7 @@ ul {
   background: url(../../../assets/home-image-1.jpg);
   background-size: cover;
   height: 45rem;
+  overflow-x: hidden;
 }
 .home-header .wrapper {
   display: -webkit-box;
